fix: header on mobile resolution

--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -14,7 +14,7 @@
     margin-left: 0px;
     scale: 1;
 
-    @media (max-width: 576px) {
+    @media (max-width: 1080px) {
       margin-top: 0px;
       // margin-left: -18px;
       // scale: 0.85;
@@ -104,6 +104,14 @@
     .headerButton {
       &.logIn {
         display: none;
+      }
+    }
+  }
+
+  @media (max-width: 380px) {
+    .headerButton {
+      &.signUp {
+        margin-top: 2px;
       }
     }
   }
