--- a/src/components/top-casinos/OfferCard.module.scss
+++ b/src/components/top-casinos/OfferCard.module.scss
@@ -21,10 +21,10 @@
   h3 {
     color: $text-color-secondary;
     text-align: center;
-    font-family: $font-secondary;
+    font-family: $font-primary;
     font-size: 20px;
     font-style: normal;
-    font-weight: 700;
+    font-weight: 500;
     line-height: normal;
   }
 
